Fix language chooser

--- a/examle.html
+++ b/examle.html
@@ -15,8 +15,8 @@ This is an example template, which should show how different frameworks do inter
 <from>
 <p id="instruction1">Should be set by js</p><input id="num" type="text" size="5" maxlength="5" value="2" />
 <p id="instruction2">Should be set by js</p><select id="lang" size="1">
-      <option lang="de">German</option>
-      <option lang="en">English</option>
+      <option value="de">German</option>
+      <option value="en">English</option>
     </select>
 </form>
 <script type="text/javascript">
