added a translation method row

--- a/result.html
+++ b/result.html
@@ -16,6 +16,7 @@
 <th>load on demand</th>
 <th>auto detect</th>
 <th>switch language</th>
+<th>method</th>
 </tr>
 <tr>
 <td><!--Framework--><a href="http://eligrey.com/blog/post/passive-localization-in-javascript">l10n.js</a></td>
@@ -27,6 +28,7 @@
 <td><!--load on demand-->yes</td>
 <td><!--auto detect-->yes</td>
 <td><!--switch language-->for changed</td>
+<td><!--translation method-->both,proerties prefered</td>
 </tr>
 <tr>
 <td><!--Framework--><a href="http://i18next.com/">i18next.js</a></td>
@@ -38,6 +40,7 @@
 <td><!--load on demand-->yes</td>
 <td><!--auto detect-->yes</td>
 <td><!--switch language-->for changed</td>
+<td><!--translation method-->properties</td>
 </tr>
 <tr>
 <td><!--Framework--></td>
@@ -49,6 +52,7 @@
 <td><!--load on demand--></td>
 <td><!--auto detect--></td>
 <td><!--switch language--></td>
+<td><!--translation method--></td>
 </tr>
 </table>
 </body>
