Added jsperanto i18n framework

--- a/result.html
+++ b/result.html
@@ -43,6 +43,18 @@
 <td><!--translation method-->properties</td>
 </tr>
 <tr>
+<td><!--Framework--><a href="https://github.com/jpjoyal/jsperanto">jsperanto</a></td>
+<td><!--License-->MIT License</td>
+<td><!--Bytes js code-->5992</td>
+<td><!--Bytes dependeny js code-->72174</td>
+<td><!--plural-->yes</td>
+<td><!--placeholder-->yes</td>
+<td><!--load on demand-->yes</td>
+<td><!--auto detect-->yes</td>
+<td><!--switch language-->for changed</td>
+<td><!--translation method-->properties</td>
+</tr>
+<tr>
 <td><!--Framework--></td>
 <td><!--License--></td>
 <td><!--Bytes js code--></td>
